# EmbeddedSoftWare_practice

./: README.md
lab3/: CMakeLists.txt  trace.odt
lab3/src/: CMakeLists.txt  a.out  client1.c  client12.c  client2.c  client22.c  hello.c  proc_test1.c  proc_test2.c  proc_test3.c  server.c  server2.c  server3.c
lab4/: CMakeLists.txt  readfirst.c  rw_balance.c  writefirst.c
